# Ripple

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: gh_pages.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/ripple/: ripple.aleatoric.rst  ripple.base.rst  ripple.constants.rst  ripple.model.rst  ripple.models.basic.rst  ripple.models.rst  ripple.rst
ripple/: aleatoric.py  base.py  constants.py  epistemic.py  layers.py  model.py
ripple/models/: __init__.py  basic.py
tests/: test_epistemic.py  test_model.py  test_mve.py
