[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ripple"
authors = [
    {name = "Vaibhav Balloli", email = "balloli.vb@gmail.com"},
]
description = "Risk-aware ML in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Uncertainty", "PyTorch"]
license = {text = "AGPL"}
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "ripple.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.docformatter]
black = true
non-strict = false
non-cap = [
	"docformatter",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = 'ripple'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
select = ["F", "E", "W", "I"]
